WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83407
[chromium] Clear values in combinedClear path not respected in WebGLRenderingContext::clearIfComposited()
https://bugs.webkit.org/show_bug.cgi?id=83407
Summary
[chromium] Clear values in combinedClear path not respected in WebGLRendering...
James Robinson
Reported
2012-04-06 15:50:39 PDT
[chromium] Clear values in combinedClear path not respected in WebGLRenderingContext::clearIfComposited()
Attachments
Patch
(7.96 KB, patch)
2012-04-06 15:51 PDT
,
James Robinson
no flags
Details
Formatted Diff
Diff
Patch
(9.33 KB, patch)
2012-04-06 15:58 PDT
,
James Robinson
kbr
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Robinson
Comment 1
2012-04-06 15:51:21 PDT
Created
attachment 136081
[details]
Patch
James Robinson
Comment 2
2012-04-06 15:52:01 PDT
This fixes the regressions in
http://code.google.com/p/chromium/issues/detail?id=122463
. I need to add some layout test coverage before landing (which is why I left the OOPS! in), but posting the code first so folks can look at it.
James Robinson
Comment 3
2012-04-06 15:58:37 PDT
Created
attachment 136083
[details]
Patch
James Robinson
Comment 4
2012-04-06 16:00:10 PDT
Turns out fast/canvas/webgl/canvas-test.html covers this when run interactively, but since it was running in DRT without any explicit display() calls we didn't hit the same clearIfComposited() calls and the bug didn't manifest. Tweaked the test to do something closer to what a real browser does so it would catch this regression.
Kenneth Russell
Comment 5
2012-04-06 16:05:00 PDT
Comment on
attachment 136083
[details]
Patch LGTM as long as it's been tested.
James Robinson
Comment 6
2012-04-06 16:08:53 PDT
Thanks. I've checked this on the layout tests, the failure gpu_tests test, and manually made sure the webgl aquarium shows up so I think we're good. Of course, I thought that last time too so my record isn't that great :)
James Robinson
Comment 7
2012-04-06 16:09:52 PDT
Committed
r113517
: <
http://trac.webkit.org/changeset/113517
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug