[chromium] Clear values in combinedClear path not respected in WebGLRenderingContext::clearIfComposited() https://bugs.webkit.org/show_bug.cgi?id=83407

Source/WebCore:

Reviewed by Kenneth Russell.

When doing a combined clear in the drawing buffer path, we have to use the user specified values for the clear
color / mask / depth and not all 0s.

Covered by slight modification to fast/canvas/webgl/canvas-test.html

* html/canvas/WebGLRenderingContext.cpp:
(WebCore):
(WebCore::WebGLRenderingContext::clearIfComposited):
* platform/graphics/gpu/DrawingBuffer.cpp:
(WebCore::DrawingBuffer::clearFramebuffers):
(WebCore::DrawingBuffer::reset):
* platform/graphics/gpu/DrawingBuffer.h:

LayoutTests:

Force a composite on each tick to more closely match the test's behavior in an actual browser.

* fast/canvas/webgl/canvas-test.html:

Canonical link: https://commits.webkit.org/100841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113517 268f45cc-cd09-0410-ab3c-d52691b4dbfc